import("//build/ohos.gni")  # 导入编译模板

fio_sources = [
  "//third_party/fio/backend.c",
  "//third_party/fio/blktrace.c",
  "//third_party/fio/cconv.c",
  "//third_party/fio/cgroup.c",
  "//third_party/fio/client.c",
  "//third_party/fio/crc/crc16.c",
  "//third_party/fio/crc/crc32.c",
  "//third_party/fio/crc/crc32c-arm64.c",
  "//third_party/fio/crc/crc32c-intel.c",
  "//third_party/fio/crc/crc32c.c",
  "//third_party/fio/crc/crc64.c",
  "//third_party/fio/crc/crc7.c",
  "//third_party/fio/crc/fnv.c",
  "//third_party/fio/crc/md5.c",
  "//third_party/fio/crc/murmur3.c",
  "//third_party/fio/crc/sha1.c",
  "//third_party/fio/crc/sha256.c",
  "//third_party/fio/crc/sha3.c",
  "//third_party/fio/crc/sha512.c",
  "//third_party/fio/crc/test.c",
  "//third_party/fio/crc/xxhash.c",
  "//third_party/fio/debug.c",
  "//third_party/fio/dedupe.c",
  "//third_party/fio/diskutil.c",
  "//third_party/fio/engines/cmdprio.c",
  "//third_party/fio/engines/cpu.c",
  "//third_party/fio/engines/e4defrag.c",
  "//third_party/fio/engines/exec.c",
  "//third_party/fio/engines/falloc.c",
  "//third_party/fio/engines/fileoperations.c",
  "//third_party/fio/engines/ftruncate.c",
  "//third_party/fio/engines/io_uring.c",
  "//third_party/fio/engines/mmap.c",
  "//third_party/fio/engines/mtd.c",
  "//third_party/fio/engines/net.c",
  "//third_party/fio/engines/null.c",
  "//third_party/fio/engines/nvme.c",
  "//third_party/fio/engines/posixaio.c",
  "//third_party/fio/engines/sg.c",
  "//third_party/fio/engines/splice.c",
  "//third_party/fio/engines/sync.c",
  "//third_party/fio/eta.c",
  "//third_party/fio/fdp.c",
  "//third_party/fio/fifo.c",
  "//third_party/fio/filehash.c",
  "//third_party/fio/filelock.c",
  "//third_party/fio/filesetup.c",
  "//third_party/fio/fio.c",
  "//third_party/fio/fio_sem.c",
  "//third_party/fio/flow.c",
  "//third_party/fio/gettime-thread.c",
  "//third_party/fio/gettime.c",
  "//third_party/fio/helper_thread.c",
  "//third_party/fio/helpers.c",
  "//third_party/fio/idletime.c",
  "//third_party/fio/init.c",
  "//third_party/fio/io_u.c",
  "//third_party/fio/io_u_queue.c",
  "//third_party/fio/ioengines.c",
  "//third_party/fio/iolog.c",
  "//third_party/fio/json.c",
  "//third_party/fio/lib/axmap.c",
  "//third_party/fio/lib/bloom.c",
  "//third_party/fio/lib/flist_sort.c",
  "//third_party/fio/lib/gauss.c",
  "//third_party/fio/lib/getrusage.c",
  "//third_party/fio/lib/hweight.c",
  "//third_party/fio/lib/ieee754.c",
  "//third_party/fio/lib/lfsr.c",
  "//third_party/fio/lib/memalign.c",
  "//third_party/fio/lib/memcpy.c",
  "//third_party/fio/lib/mountcheck.c",
  "//third_party/fio/lib/num2str.c",
  "//third_party/fio/lib/output_buffer.c",
  "//third_party/fio/lib/pattern.c",
  "//third_party/fio/lib/prio_tree.c",
  "//third_party/fio/lib/rand.c",
  "//third_party/fio/lib/rbtree.c",
  "//third_party/fio/lib/strntol.c",
  "//third_party/fio/lib/zipf.c",
  "//third_party/fio/libfio.c",
  "//third_party/fio/log.c",
  "//third_party/fio/memory.c",
  "//third_party/fio/optgroup.c",
  "//third_party/fio/options.c",
  "//third_party/fio/oslib/asprintf.c",
  "//third_party/fio/oslib/libmtd.c",
  "//third_party/fio/oslib/libmtd_legacy.c",
  "//third_party/fio/oslib/linux-blkzoned.c",
  "//third_party/fio/oslib/linux-dev-lookup.c",
  "//third_party/fio/oslib/statx.c",
  "//third_party/fio/oslib/strlcat.c",
  "//third_party/fio/parse.c",
  "//third_party/fio/profile.c",
  "//third_party/fio/profiles/act.c",
  "//third_party/fio/profiles/tiobench.c",
  "//third_party/fio/pshared.c",
  "//third_party/fio/rate-submit.c",
  "//third_party/fio/rwlock.c",
  "//third_party/fio/server.c",
  "//third_party/fio/smalloc.c",
  "//third_party/fio/stat.c",
  "//third_party/fio/steadystate.c",
  "//third_party/fio/td_error.c",
  "//third_party/fio/time.c",
  "//third_party/fio/trim.c",
  "//third_party/fio/verify.c",
  "//third_party/fio/workqueue.c",
  "//third_party/fio/zbd.c",
  "//third_party/fio/zone-dist.c",
]


ohos_executable("fio") {
  sources = fio_sources

  include_dirs = [
    "."
  ]

  install_enable = true
  
  part_name = "fio"
  
  cflags = [
    "-DCONFIG_HAVE_REP_CAPACITY",
    "-DBITS_PER_LONG=32",
    "-D_FILE_OFFSET_BITS=64",
    "-DCONFIG_LITTLE_ENDIAN",
    "-DFIO_INTERNAL",
    "-DCONFIG_ZLIB",
    "-DCONFIG_PSHARED",
    "-DCONFIG_PTHREAD_CONDATTR_SETCLOCK",
    "-DCONFIG_PTHREAD_SIGMASK",
    "-DCONFIG_PTHREAD_GETAFFINITY",
    "-DCONFIG_HAVE_ASPRINTF",
    "-DCONFIG_HAVE_VASPRINTF",
    "-DCONFIG_LINUX_FALLOCATE",
    "-DCONFIG_POSIX_FALLOCATE",
    "-DCONFIG_FDATASYNC",
    "-DCONFIG_PIPE",
    "-DCONFIG_PIPE2",
    "-DCONFIG_PREAD",
    "-DCONFIG_SYNC_FILE_RANGE",
    "-DCONFIG_SFAA",
    "-DCONFIG_SYNC_SYNC",
    "-DCONFIG_CMP_SWAP",
    "-DCONFIG_CLOCK_GETTIME",
    "-DCONFIG_CLOCK_MONOTONIC",
    "-DCONFIG_CLOCKID_T",
    "-DCONFIG_GETTIMEOFDAY",
    "-DCONFIG_POSIX_FADVISE",
    "-DCONFIG_POSIXAIO",
    "-DCONFIG_POSIXAIO_FSYNC",
    "-DCONFIG_3ARG_AFFINITY",
    "-DCONFIG_STRSEP",
    "-DCONFIG_STRCASESTR",
    "-DCONFIG_GETOPT_LONG_ONLY",
    "-DCONFIG_INET_ATON",
    "-DCONFIG_SOCKLEN_T",
    "-DCONFIG_LINUX_EXT4_MOVE_EXTENT",
    "-DCONFIG_LINUX_SPLICE",
    "-DCONFIG_TLS_THREAD",
    "-DCONFIG_RUSAGE_THREAD",
    "-DCONFIG_SCHED_IDLE",
    "-DCONFIG_TCP_NODELAY",
    "-DCONFIG_NET_WINDOWSIZE",
    "-DCONFIG_NET_MSS",
    "-DCONFIG_RLIMIT_MEMLOCK",
    "-DCONFIG_PWRITEV",
    "-DCONFIG_IPV6",
    "-DCONFIG_SETVBUF",
    "-DCONFIG_MTD",
    "-DCONFIG_GETMNTENT",
    "-DCONFIG_STATIC_ASSERT",
    "-DCONFIG_HAVE_BOOL",
    "-DCONFIG_HAVE_STRNDUP",
    "-DCONFIG_HAS_BLKZONED",
    "-DCONFIG_BUILD_NATIVE",
    "-DCONFIG_HAVE_KERNEL_RWF_T",
    "-DCONFIG_HAVE_GETTID",
    "-DCONFIG_HAVE_STATX_SYSCALL",
    "-DCONFIG_HAVE_TIMERFD_CREATE",
    "-DCONFIG_HAVE_NO_STRINGOP",
    "-DCONFIG_HAVE_THP",
    "-DCONFIG_SEED_BUCKETS=4",
    "-DFIO_VERSION=\"fio-3.35-ohos\"",
    "-DFIO_INC_DEBUG",
    "-DCONFIG_NO_SHM",
  ]
  deps = [
    "//third_party/zlib:shared_libz",
    "//third_party/musl:musl_all",
  ]
}
